--- a/index.html
+++ b/index.html
@@ -164,12 +164,26 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1464] [Highest Citation: 599] </h2>
+<h2>Selected Publications [Total Citations: 1479] [Highest Citation: 599] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2304.06274.pdf" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
+		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, and Tieyong Zeng
+		<p><em>arXiv 2212.14181</em>, 2023.<br>
+		<a href="paper/EWT_2023.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
