--- a/index_zw.html
+++ b/index_zw.html
@@ -176,12 +176,26 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1464] [最高引用: 599] </h2>
+<h2>精选出版物 [总引用: 1479] [最高引用: 599] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2304.06274.pdf" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
+		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, and Tieyong Zeng
+		<p><em>arXiv 2212.14181</em>, 2023.<br>
+		<a href="paper/EWT_2023.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
