--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <h3>2018-Now, 26 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One review is accepted by Mathematics, 2023.</td></tr> 
 		<tr><td>One challenge report is accepted by CVPR Workshop, 2023.</td></tr> 	
 		<tr><td>One paper is accepted by CICP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2023.</td></tr> 
@@ -164,7 +165,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1486] [Highest Citation: 601] </h2>
+<h2>Selected Publications [Total Citations: 1488] [Highest Citation: 602] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
