--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2018-现在，26篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	
 		<tr><td>一篇论文已被 CICP 接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2023.</td></tr> 
@@ -176,7 +177,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1486] [最高引用: 601] </h2>
+<h2>精选出版物 [总引用: 1488] [最高引用: 602] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
