--- a/index_zw.html
+++ b/index_zw.html
@@ -177,7 +177,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1488] [最高引用: 602] </h2>
+<h2>精选出版物 [总引用: 1502] [最高引用: 607] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
@@ -254,6 +254,28 @@
 	</tr>
 </tbody></table>
 
+
+
+<h4>医学影像处理</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【Hot】</font></a><br>
+		Hanhui Yang, <b>Juncheng Li*</b>, Lok Ming Lui, Shihui Ying, Jun Shi, and Tieyong Zeng*
+		<p><em>Communications in Computational Physics</em> (<i><b>CICP</b></i>), 2023. <br>
+        <a href="https://arxiv.org/pdf/2304.11400.pdf", target="_blank">[论文]</a>
+		<a href="", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+</tbody></table>
+
+
 <h4>精选期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -264,7 +286,6 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">SCI-2区。</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[主页]</a>
@@ -282,7 +303,7 @@
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">作者按字母序排列。SCI-1区.</font><br> 
+		<font color="red">作者按字母序排列。</font><br> 
 		<!-- <iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br> -->
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
@@ -301,7 +322,7 @@
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoisingt</a><br>
 		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">作者按字母序排列。SCI-1区.</font><br> 
+		<font color="red">作者按字母序排列。</font><br> 
 		<!-- <iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br> -->
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
@@ -320,7 +341,6 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang*, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">SCI-1区。</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[代码]</a>
 		</td>
@@ -337,7 +357,6 @@
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, and Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2021. <br>
-		<font color="red">SCI-1区。</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -352,7 +371,6 @@
 		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red"></font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">SCI-1区。</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
 		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[主页]</a>
 		</td>
@@ -368,7 +386,6 @@
 		<td> <a href="" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
-		<font color="red">SCI-2.</font><br>
 		<a href="paper/ASRN.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -452,7 +469,7 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red"></font></a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会.</font><br>
@@ -470,7 +487,7 @@
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red"></font></a><br>
+		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer</a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会. 口头报告（Oral Presentation）</font><br>
