--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1488] [Highest Citation: 602] </h2>
+<h2>Selected Publications [Total Citations: 1502] [Highest Citation: 607] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
@@ -244,6 +244,25 @@
     <tr></tr>
 	<tr></tr>
  </tbody></table>
+
+ <h4>Medical Image Processing</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【New】</font></a><br>
+		Hanhui Yang, <b>Juncheng Li*</b>, Lok Ming Lui, Shihui Ying, Jun Shi, and Tieyong Zeng*
+		<p><em>Communications in Computational Physics</em> (<i><b>CICP</b></i>), 2023. <br>
+        <a href="https://arxiv.org/pdf/2304.11400.pdf", target="_blank">[Paper]</a>
+		<a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+</tbody></table>
 
 <h4>Selected Journal Papers</h4>
 <table id="tbPublications" width="100%">
@@ -340,7 +359,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red"></font></a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
@@ -444,7 +463,7 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red"></font></a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution<br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">Top artificial intelligence conference.</font><br>
