--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution<br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">Top artificial intelligence conference.</font><br>
@@ -572,6 +572,23 @@
 		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a>
 		<a href="video/NTIRE Stereo Image SR Challenge.mp4", target="_blank">[Video]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2023.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/NTIRE2023.pdf" target="_blank">NTIRE 2023 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2023.<br>
+		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
+		<font color="red">Co-Organizer</font><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=The-Learning-And-Vision-Atelier-LAVA&repo=Stereo-Image-SR&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
+		<a href="paper/NTIRE2023.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
