--- a/index_zw.html
+++ b/index_zw.html
@@ -256,7 +256,7 @@
 
 
 
-<h4>医学影像处理</h4>
+<h4>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
@@ -486,7 +486,7 @@
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
+		</td>
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer</a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
@@ -576,6 +576,23 @@
 		<a href="paper/NTIRE2022.pdf", target="_blank">[论文]</a>
 		<a href="video/NTIRE Stereo Image SR Challenge.mp4", target="_blank">[视频]</a>
 		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2023.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/NTIRE2023.pdf" target="_blank">NTIRE 2023 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2023.<br>
+		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
+		<font color="red">组织者</font><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=The-Learning-And-Vision-Atelier-LAVA&repo=Stereo-Image-SR&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
+		<a href="paper/NTIRE2023.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
