--- a/index_zw.html
+++ b/index_zw.html
@@ -78,14 +78,14 @@
 		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr> 
-		<tr><td>--------------------</td></tr> 
+		<tr><td>------博后期间-----------</td></tr> 
 		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
-		<tr><td>--------------------</td></tr> 
+		<tr><td>------博士期间---------</td></tr> 
 		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
@@ -263,7 +263,7 @@
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【Hot】</font></a><br>
+		<td> <a href="paper/CICP_2023.pdf" target="_blank">Fast MRI Reconstruction via Edge Attention <font color="red">【New】</font></a><br>
 		Hanhui Yang, <b>Juncheng Li*</b>, Lok Ming Lui, Shihui Ying, Jun Shi, and Tieyong Zeng*
 		<p><em>Communications in Computational Physics</em> (<i><b>CICP</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2304.11400.pdf", target="_blank">[论文]</a>
