--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ICASSP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr> 
-		<tr><td>--------------------</td></tr> 
+		<tr><td>------Postdoc--------</td></tr> 
 		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
 		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
-		<tr><td>--------------------</td></tr> 
+		<tr><td>-------Ph.D---------</td></tr> 
 		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
