--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2018-现在，26篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
 		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
 		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	
 		<tr><td>一篇论文已被 CICP 接收, 2023.</td></tr> 
