--- a/index_zw.html
+++ b/index_zw.html
@@ -191,7 +191,7 @@
 		<td> <a href="https://arxiv.org/pdf/2304.06274.pdf" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, and Tieyong Zeng
 		<p><em>arXiv 2304.06274</em>, 2023.<br>
-		<a href="paper/EWT_2023.pdf", target="_blank">[Paper]</a>
+		<a href="paper/EWT_2023.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -219,7 +219,7 @@
 		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
 		Wenjie Li#, <b>Juncheng Li#</b>, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
 		<p><em>arXiv 2212.14181</em>, 2023.<br>
-		<a href="paper/FIWHN_2023.pdf", target="_blank">[Paper]</a>
+		<a href="paper/FIWHN_2023.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
