--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1550、9] [Highest Citation: 621] </h2>
+<h2>Selected Publications [Total Citations: 1559] [Highest Citation: 621] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
