--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 <h2>News</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 26 Papers, 3 Challenge Reports</h3> -->
+<h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper is accepted by IEEE TMM, 2023.</td></tr> 
 		<tr><td>One review is accepted by Mathematics, 2023.</td></tr> 
-		<tr><td>One challenge report is accepted by CVPR Workshop, 2023.</td></tr> 	
+		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2023.</td></tr> 	 -->
 		<tr><td>One paper is accepted by CICP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
@@ -90,7 +90,7 @@
 		<tr><td>------Postdoc--------</td></tr> 
 		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
-		<tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	
+		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	 -->
 		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
@@ -107,12 +107,12 @@
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
 		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
-		<tr><td>One challenge report is accepted by ICCV Workshop, 2019.</td></tr> 
+		<!-- <tr><td>One challenge report is accepted by ICCV Workshop, 2019.</td></tr>  -->
 		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
 		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
-		<tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	
+		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	 -->
 	</tbody>
 </table>
 
