--- a/index_zw.html
+++ b/index_zw.html
@@ -68,12 +68,12 @@
 <h2>最新消息</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3>2018-现在，26篇论文，3篇比赛报告</h3> -->
+<h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
 		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
-		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	
+		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	 -->
 		<tr><td>一篇论文已被 CICP 接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
@@ -82,7 +82,7 @@
 		<tr><td>------博后期间-----------</td></tr> 
 		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
-		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	
+		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	 -->
 		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
@@ -99,12 +99,12 @@
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
 		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
-		<tr><td>一篇比赛报告已被 ICCV Workshop接收, 2019.</td></tr> 
+		<!-- <tr><td>一篇比赛报告已被 ICCV Workshop接收, 2019.</td></tr>  -->
 		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
 		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
-		<tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	
+		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	 -->
 	</tbody>
 </table>
 
@@ -162,19 +162,19 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
-		上海市自然科学基金面上项目, 20万, 2023, 主持。
+		上海市自然科学基金面上项目, 2023, 主持。
 	</li>
 	<li>
-		上海市启明星（杨帆专项）, 20万, 2023, 主持。
+		上海市启明星（杨帆专项）, 2023, 主持。
 	</li>
 	<li>
-		江苏省社会安全图像与视频理解重点实验室创新基金, 2万, 2022, 主持。
+		江苏省社会安全图像与视频理解重点实验室创新基金, 2022, 主持。
 	</li>
 	<li>
-		国家自然科学基金-国际(地区)合作与交流项目, 100万, 2020, 参与。
+		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
 	</li>
 	<li>
-		国家自然科学基金-面上项目, 63万, 2019, 参与。
+		国家自然科学基金-面上项目, 2019, 参与。
 	</li>
 </ul>
 
