--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 PR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
 		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	 -->
@@ -178,7 +179,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1593] [最高引用: 628] </h2>
+<h2>精选出版物 [总引用: 1603] [最高引用: 631] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
@@ -421,7 +422,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。【引用：620+】</font><br>
+		<font color="red">计算机视觉顶级会议。【引用：630+】</font><br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
