--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 MICCAI接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 PR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
 		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
