--- a/index_zw.html
+++ b/index_zw.html
@@ -265,6 +265,19 @@
 <h4>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
+		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
+		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
+        <a href="paper/MICCAI_2023.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
     <tr>	
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
