--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
-        <a href="paper/MICCAI_2023.pdf", target="_blank">[论文]</a>
+        <a href="paper/MICCAI_2023.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
