--- a/index_zw.html
+++ b/index_zw.html
@@ -164,13 +164,16 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
+		广东省***重点实验室开放课题, 2023, 主持。
+	</li>
+	<li>
 		上海市自然科学基金面上项目, 2023, 主持。
 	</li>
 	<li>
 		上海市启明星（杨帆专项）, 2023, 主持。
 	</li>
 	<li>
-		江苏省社会安全图像与视频理解重点实验室创新基金, 2022, 主持。
+		江苏省***重点实验室创新基金, 2022, 主持。
 	</li>
 	<li>
 		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
