--- a/index_zw.html
+++ b/index_zw.html
@@ -110,6 +110,28 @@
 	</tbody>
 </table>
 
+<h2>基金项目</h2></ul>
+<ul>
+	<li>
+		上海市自然科学基金面上项目, 2023, 主持。
+	</li>
+	<li>
+		上海市启明星（杨帆专项）, 2023, 主持。
+	</li>
+	<li>
+		广东省重点实验室开放课题, 2023, 主持。
+	</li>
+	<li>
+		江苏省重点实验室创新基金, 2022, 主持。
+	</li>
+	<li>
+		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
+	</li>
+	<li>
+		国家自然科学基金-面上项目, 2019, 参与。
+	</li>
+</ul>
+
 
 <h2>荣誉 &amp; 奖项</h2>
 <table style="border-spacing:2px">
@@ -161,29 +183,7 @@
 </ul>
 
 
-<h2>基金项目</h2></ul>
-<ul>
-	<li>
-		广东省***重点实验室开放课题, 2023, 主持。
-	</li>
-	<li>
-		上海市自然科学基金面上项目, 2023, 主持。
-	</li>
-	<li>
-		上海市启明星（杨帆专项）, 2023, 主持。
-	</li>
-	<li>
-		江苏省***重点实验室创新基金, 2022, 主持。
-	</li>
-	<li>
-		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
-	</li>
-	<li>
-		国家自然科学基金-面上项目, 2019, 参与。
-	</li>
-</ul>
-
-<h2>精选出版物 [总引用: 1757] [最高引用: 658] </h2>
+<h2>精选出版物 [总引用: 1763] [最高引用: 662] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
