--- a/index_zw.html
+++ b/index_zw.html
@@ -68,22 +68,25 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
-		上海市自然科学基金面上项目, 2023, 主持。
+		上海市自然科学基金面上项目, 2023, 主持
 	</li>
 	<li>
-		上海市启明星（杨帆专项）, 2023, 主持。
+		上海市启明星（杨帆专项）, 2023, 主持
 	</li>
 	<li>
-		广东省重点实验室开放课题, 2023, 主持。
+		上海大学“青年英才启航计划”, 2023, 主持
 	</li>
 	<li>
-		江苏省重点实验室创新基金, 2022, 主持。
+		广东省重点实验室开放课题, 2023, 主持
 	</li>
 	<li>
-		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
+		江苏省重点实验室创新基金, 2022, 主持
 	</li>
 	<li>
-		国家自然科学基金-面上项目, 2019, 参与。
+		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与
+	</li>
+	<li>
+		国家自然科学基金-面上项目, 2019, 参与
 	</li>
 </ul>
 
