--- a/index_zw.html
+++ b/index_zw.html
@@ -102,6 +102,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ACPR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 MICCAI接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 PR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
@@ -192,7 +193,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 1809] [最高引用: 673] </h2>
+<h2>精选出版物 [总引用: 1810] [最高引用: 674] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
