--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by ACPR, 2023.</td></tr> 
 		<tr><td>One paper is accepted by MICCAI, 2023.</td></tr> 
 		<tr><td>One paper is accepted by PR, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2023.</td></tr> 
@@ -168,7 +169,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1809] [Highest Citation: 673] </h2>
+<h2>Selected Publications [Total Citations: 1810] [Highest Citation: 674] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
