--- a/index_zw.html
+++ b/index_zw.html
@@ -74,7 +74,7 @@
 		国家自然科学基金-青年基金项目, 30W, 2023, 主持
 	</li>
 	<li>
-		上海市自然科学基金面上项目, 20W, 2023, 主持
+		上海市自然科学基金-面上项目, 20W, 2023, 主持
 	</li>
 	<li>
 		上海市青年科技英才杨帆计划, 20W, 2023, 主持
