--- a/index_zw.html
+++ b/index_zw.html
@@ -83,6 +83,9 @@
 		上海大学青年英才启航计划, 30W, 2023, 主持
 	</li>
 	<li>
+		上海市重点实验室开放课题, 3W, 2023, 主持
+	</li>
+	<li>
 		广东省重点实验室开放课题, 6W, 2023, 主持
 	</li>
 	<li>
