--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					Assistant Professor<br>
 					School of Communication & Information Engineering,<br>
 					Shanghai University,<br>
-					Xiangying Building, Baoshan, Shanghai.<br>
+					T807, Xiangying Building, Baoshan, Shanghai.<br>
 					<br>
 					Email: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn<br>
 					<br>
