--- a/index_zw.html
+++ b/index_zw.html
@@ -36,7 +36,7 @@
 
 				<p>
 					上海大学-通信与信息工程学院<br>
-					上海，宝山区，翔英大楼<br>
+					上海，宝山区，翔英大楼，T807<br>
 					<br>
 					邮箱: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn       
 				</p>
