--- a/index_zw.html
+++ b/index_zw.html
@@ -108,6 +108,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇综述已被 中国图象图形学报接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 CVIU接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ACPR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 MICCAI接收, 2023.</td></tr> 
