--- a/index_zw.html
+++ b/index_zw.html
@@ -71,25 +71,25 @@
 		--------主持--------
 	</li>
 	<li>
-		国家自然科学基金-青年基金项目, 30W, 2023, 主持
+		国家自然科学基金-青年基金项目, 2023, 主持
 	</li>
 	<li>
-		上海市自然科学基金-面上项目, 20W, 2023, 主持
+		上海市自然科学基金-面上项目, 2023, 主持
 	</li>
 	<li>
-		上海市青年科技英才杨帆计划, 20W, 2023, 主持
+		上海市青年科技英才杨帆计划, 2023, 主持
 	</li>
 	<li>
-		上海大学青年英才启航计划, 30W, 2023, 主持
+		上海大学青年英才启航计划, 2023, 主持
 	</li>
 	<li>
-		上海市重点实验室开放课题, 3W, 2023, 主持
+		上海市重点实验室开放课题, 2023, 主持
 	</li>
 	<li>
-		广东省重点实验室开放课题, 6W, 2023, 主持
+		广东省重点实验室开放课题, 2023, 主持
 	</li>
 	<li>
-		江苏省重点实验室创新基金, 2W, 2022, 主持
+		江苏省重点实验室创新基金, 2022, 主持
 	</li>
 	<li>
 		--------参与--------
@@ -201,7 +201,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 1872] [最高引用: 681] </h2>
+<h2>精选出版物 [总引用: 1880] [最高引用: 682] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
