--- a/index_zw.html
+++ b/index_zw.html
@@ -108,7 +108,8 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇综述已被 IEEE JBHI, 2023.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI, 2023.</td></tr> 
+		<tr><td>一篇论文已被 IEEE JBHI, 2023.</td></tr> 
 		<tr><td>一篇综述已被 中国图象图形学报接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 CVIU接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ACPR接收, 2023.</td></tr> 
@@ -202,7 +203,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 1930] [最高引用: 693] </h2>
+<h2>精选出版物 [总引用: 1946] [最高引用: 697] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
