--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
 		<tr><td>One review is accepted by Journal of Image and Graphics, 2023.</td></tr> 
 		<tr><td>One paper is accepted by CVIU, 2023.</td></tr> 
@@ -172,7 +173,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1930] [Highest Citation: 693] </h2>
+<h2>Selected Publications [Total Citations: 1946] [Highest Citation: 697] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
