--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
 
 
 <h2>News</h2>
+<table style="border-spacing:2px">
+	<tbody>
+		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
+		<tr><td>Selected into “Yang Fan Plan” of Shanghai, 2023.</td></tr>
+	</tbody>
+</table>
+
+
+<h2>Papers</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
