--- a/index_zw.html
+++ b/index_zw.html
@@ -65,6 +65,14 @@
 	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文30余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际期刊/会议审稿人。
 </p>
 
+<h2>新闻</h2>
+<table style="border-spacing:2px">
+	<tbody>
+		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
+		<tr><td>入选上海市”杨帆计划“, 2023.</td></tr>
+	</tbody>
+</table>
+
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
@@ -102,7 +110,7 @@
 	</li>
 </ul>
 
-<h2>最新消息</h2>
+<h2>论文接收情况</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
