--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
+		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
 		<tr><td>Selected into “Yang Fan Plan” of Shanghai, 2023.</td></tr>
 	</tbody>
 </table>
