--- a/index_zw.html
+++ b/index_zw.html
@@ -69,6 +69,7 @@
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
+		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2023.</td></tr>
 		<tr><td>入选上海市”杨帆计划“, 2023.</td></tr>
 	</tbody>
 </table>
