--- a/index_zw.html
+++ b/index_zw.html
@@ -218,9 +218,9 @@
 <h2>精选出版物 [总引用: 2035] [最高引用: 710] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
-<h4>精选预印本</h4>
+<!-- <h4>精选预印本</h4>
 <table id="tbPublications" width="100%">
-	<tbody>
+	<tbody> -->
 	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -249,7 +249,7 @@
     <tr></tr>
 	<tr></tr> -->
 
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -261,7 +261,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	<!-- <tr>	
 		<td width="206">
@@ -277,7 +277,7 @@
     <tr></tr>
 	<tr></tr> -->
 
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -293,7 +293,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-</tbody></table>
+</tbody></table> -->
 
 
 
@@ -302,12 +302,38 @@
 	<tbody>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/TMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/TMI_2023.pdf" target="_blank">Pseudo-Data based Self-Supervised Federated Learning for Classification of Histopathological Images<font color="red">【New】</font></a><br>
+		Yuanming Zhang, Zheng Li, Xiangmin Han, Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023. <br>
+        <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/JBHI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/JBHI_2023.pdf" target="_blank">Multi-scale Efficient Graph-Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
+		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
+		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2023. <br>
+        <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
-        <a href="paper/MICCAI_2023.pdf", target="_blank">[论文]</a>
+        <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
