--- a/index_zw.html
+++ b/index_zw.html
@@ -297,7 +297,7 @@
 
 
 
-<h4>医学影像处理论文</h4>
+<h3>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -356,6 +356,7 @@
 </tbody></table>
 
 
+<h3>图像复原与增强论文</h4>
 <h4>精选期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
