--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
  </tbody></table> -->
 
 
-<h4>Medical Image Processing</h4>
+<h3>Medical Image Processing</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
    <tr>	
@@ -322,6 +322,7 @@
 	<tr></tr>
 </tbody></table>
 
+<h3>Image Restoration and Enhancement</h4>
 <h4>Selected Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -412,6 +413,20 @@
     <tr></tr>
 	<tr></tr>
 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/ASRN.pdf" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
+		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang.
+		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
+		<a href="paper/ASRN.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 
 	<tr>	
 		<td width="206">
@@ -428,19 +443,6 @@
     <tr></tr>
 	<tr></tr>
 
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ASRN.pdf" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
-		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang.
-		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
-		<a href="paper/ASRN.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
 
 	<tr>	
 		<td width="206">
