--- a/index.html
+++ b/index.html
@@ -320,6 +320,19 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/JIG_2023.pdf" target="_blank">Applications and Challenges of Deep Learning in Dental Imaging <font color="red">【New】</font></a><br>
+		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
+		<p><em>Journal of Image and Graphics</em> (<i><b>Chinese Journal</b></i>), 2023. <br>
+        <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h3>Image Restoration and Enhancement</h4>
