--- a/index_zw.html
+++ b/index_zw.html
@@ -353,6 +353,19 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/JIG_2023.pdf" target="_blank">深度学习在口腔医学影像中的应用与挑战<font color="red">【New】</font></a><br>
+		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
+		<p><em>中国图象图形学报</em>, 2023. <br>
+        <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 
