--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by CIBM, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
 		<tr><td>One review is accepted by Journal of Image and Graphics, 2023.</td></tr> 
