--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2103] [Highest Citation: 728] </h2>
+<h2>Selected Publications [Total Citations: 2106] [Highest Citation: 729] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -268,6 +268,20 @@
 <h3>Medical Image Processing</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
+		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
+        <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[Paper]</a>
+		<a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
     <tr>	
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
