--- a/index_zw.html
+++ b/index_zw.html
@@ -216,7 +216,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2103] [最高引用: 728] </h2>
+<h2>精选出版物 [总引用: 2106] [最高引用: 729] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
@@ -301,7 +301,21 @@
 <h3>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
-	    <tr>	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
+		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
+        <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[论文]</a>
+		<a href="", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
