--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He have published more than 30 papers in top journals and conferences, including TIP, TNNLS, TMM, TCSVT, TMI, JBHI, ICCV, ECCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including CVPR, ICCV, AAAI, TPAMI, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, and KBS.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). I have published more than 30 papers in top journals and conferences, including TIP, TNNLS, TMM, TCSVT, TMI, JBHI, ICCV, ECCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including CVPR, ICCV, AAAI, TPAMI, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, and KBS.
 </p>
 
 
@@ -330,6 +330,20 @@
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
 		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/PR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/PR.pdf" target="_blank">Single-Particle Reconstruction in Cryo-EM based on Three-Dimensional
+			Weighted Nuclear Norm Minimization</a><br>
+			Chaoyan Huang, Tingting Wu, <b>Juncheng Li</b>, Bin Dong, Tieyong Zeng
+		<p><em>Pattern Recognition</em> (<i><b>PR</b></i>), 2023. <br>
+        <a href="https://www.sciencedirect.com/science/article/pii/S003132032300434X", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -962,7 +976,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2023-3
+&copy; Juncheng Li | Last updated: 2023-12
 </center>
 </p>
 
