--- a/index_zw.html
+++ b/index_zw.html
@@ -365,6 +365,20 @@
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/PR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/PR.pdf" target="_blank">Single-Particle Reconstruction in Cryo-EM based on Three-Dimensional
+			Weighted Nuclear Norm Minimization</a><br>
+			Chaoyan Huang, Tingting Wu, <b>Juncheng Li</b>, Bin Dong, Tieyong Zeng
+		<p><em>Pattern Recognition</em> (<i><b>PR</b></i>), 2023. <br>
+        <a href="https://www.sciencedirect.com/science/article/pii/S003132032300434X", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
@@ -984,7 +998,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2023-3
+&copy; 李俊诚 | 最后更新: 2023-12
 </center>
 </p>
 
