--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
 		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
 		<tr><td>One review is accepted by Journal of Image and Graphics, 2023.</td></tr> 
-		<tr><td>One paper is accepted by CVIU, 2023.</td></tr> 
-		<tr><td>One paper is accepted by ACPR, 2023.</td></tr> 
+		<!-- <tr><td>One paper is accepted by CVIU, 2023.</td></tr>  -->
+		<!-- <tr><td>One paper is accepted by ACPR, 2023.</td></tr>  -->
 		<tr><td>One paper is accepted by MICCAI, 2023.</td></tr> 
 		<tr><td>One paper is accepted by PR, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2023.</td></tr> 
-		<tr><td>One review is accepted by Mathematics, 2023.</td></tr> 
+		<!-- <tr><td>One review is accepted by Mathematics, 2023.</td></tr>  -->
 		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2023.</td></tr> 	 -->
-		<tr><td>One paper is accepted by CICP, 2023.</td></tr> 
+		<!-- <tr><td>One paper is accepted by CICP, 2023.</td></tr>  -->
 		<tr><td>One paper is accepted by IEEE TIP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
-		<tr><td>One paper is accepted by ICASSP, 2023.</td></tr> 
-		<tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr> 
+		<!-- <tr><td>One paper is accepted by ICASSP, 2023.</td></tr>  -->
+		<!-- <tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr>  -->
 		<tr><td>------Postdoc--------</td></tr> 
-		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr> 
+		<!-- <tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr>  -->
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	 -->
-		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
+		<!-- <tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr>  -->
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
 		<tr><td>-------Ph.D---------</td></tr> 
@@ -118,17 +118,17 @@
 		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
-		<tr><td>One paper is accepted by ICME, 2021.</td></tr> 	
+		<!-- <tr><td>One paper is accepted by ICME, 2021.</td></tr> 	 -->
 		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
+		<!-- <tr><td>One paper is accepted by IEEE Access, 2020.</td></tr>  -->
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
-		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
+		<!-- <tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr>  -->
 		<!-- <tr><td>One challenge report is accepted by ICCV Workshop, 2019.</td></tr>  -->
-		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
-		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
-		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
+		<!-- <tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	 -->
+		<!-- <tr><td>One paper is accepted by ICONIP, 2018.</td></tr>  -->
+		<!-- <tr><td>One paper is accepted by ACCV, 2018.</td></tr>  -->
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
 		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	 -->
 	</tbody>
@@ -184,7 +184,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2193] [Highest Citation: 743] </h2>
+<h2>Selected Publications [Total Citations: 2203] [Highest Citation: 744] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
