--- a/index_zw.html
+++ b/index_zw.html
@@ -124,23 +124,23 @@
 		<tr><td>一篇论文已被 IEEE TMI, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2023.</td></tr> 
 		<tr><td>一篇综述已被 中国图象图形学报接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 CVIU接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 ACPR接收, 2023.</td></tr> 
+		<!-- <tr><td>一篇论文已被 CVIU接收, 2023.</td></tr>  -->
+		<!-- <tr><td>一篇论文已被 ACPR接收, 2023.</td></tr>  -->
 		<tr><td>一篇论文已被 MICCAI接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 PR接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
-		<tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr> 
+		<!-- <tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr>  -->
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	 -->
-		<tr><td>一篇论文已被 CICP 接收, 2023.</td></tr> 
+		<!-- <tr><td>一篇论文已被 CICP 接收, 2023.</td></tr>  -->
 		<tr><td>一篇论文已被 IEEE TIP接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr> 
+		<!-- <tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr>  -->
+		<!-- <tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr>  -->
 		<tr><td>------博后期间-----------</td></tr> 
-		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr> 
+		<!-- <tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr>  -->
 		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	 -->
-		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
+		<!-- <tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr>  -->
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
 		<tr><td>------博士期间---------</td></tr> 
@@ -149,17 +149,17 @@
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
-		<tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	
+		<!-- <tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	 -->
 		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
-		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
+		<!-- <tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr>  -->
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
-		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
+		<!-- <tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr>  -->
 		<!-- <tr><td>一篇比赛报告已被 ICCV Workshop接收, 2019.</td></tr>  -->
-		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
-		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
-		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
+		<!-- <tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	 -->
+		<!-- <tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr>  -->
+		<!-- <tr><td>一篇论文已被 ACCV接收, 2018.</td></tr>  -->
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	 -->
 	</tbody>
@@ -216,7 +216,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2193] [最高引用: 743] </h2>
+<h2>精选出版物 [总引用: 2203] [最高引用: 744] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
