--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). I have published more than 30 papers in top journals and conferences, including TIP, TNNLS, TMM, TCSVT, TMI, JBHI, ICCV, ECCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including CVPR, ICCV, AAAI, TPAMI, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, and KBS.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). I have published more than 30 papers in top journals and conferences, including TIP, TNNLS, TMM, TCSVT, TMI, JBHI, ICCV, ECCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including CVPR, ICCV, ECCV, AAAI, TPAMI, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, and KBS.
 </p>
 
 
@@ -720,10 +720,10 @@
 			<td> <a href="https://ericlab.org/acpr2023/workshops/", target="_blank">ACPR 2023 Workshop: Representation Learning for Computer Vision and Pattern Recognition</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">CVPR-NTIRE 2023: Stereo Image Super-Resolution Challenge</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">CVPR-NTIRE 2022: Stereo Image Super-Resolution Challenge</a></td>
 		</tr>
 		<tr>
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session: Advanced Representation Learning for Robust Multimedia Image Understanding</a></td>
@@ -735,10 +735,10 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
 			</tr>
 		</tbody>
 </table>
