--- a/index_zw.html
+++ b/index_zw.html
@@ -62,7 +62,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文30余篇，包括 TIP、TNNLS、TMM、TCSVT、TMI、JBHI、ECCV、ICCV、AAAI、IJCAI、MICCAI。我曾获得2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际期刊/会议审稿人。
+	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文30余篇，包括 TIP、TNNLS、TMM、TCSVT、TMI、JBHI、ECCV、ICCV、AAAI、IJCAI、MICCAI。我曾获得2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV, AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际期刊/会议审稿人。
 </p>
 
 <h2>新闻</h2>
@@ -744,10 +744,10 @@
 			<td> <a href="https://ericlab.org/acpr2023/workshops/", target="_blank">ACPR 2023 Workshop: Representation Learning for Computer Vision and Pattern Recognition</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">CVPR-NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">CVPR-NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding".</a></td>
@@ -759,10 +759,10 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
 			</tr>
 		</tbody>
 </table>
@@ -832,10 +832,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+		</tr>
+		<tr>
 			<td> International Conference on Computer Vision (ICCV)</td>
 		</tr>
 		<tr>
-			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+			<td> European Conference on Computer Vision (ECCV)</td>
 		</tr>
 		<tr>
 			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
