--- a/index.html
+++ b/index.html
@@ -705,6 +705,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Mathematical Techniques and Artificial Intelligence in Image Processing" on the Journal of Mathematics.</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
 		</tr>
 		<tr>
