--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
@@ -184,7 +185,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2345] [Highest Citation: 764] </h2>
+<h2>Selected Publications [Total Citations: 2349] [Highest Citation: 764] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
