--- a/index.html
+++ b/index.html
@@ -269,6 +269,19 @@
 <h3>Medical Image Processing</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/TSDDNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【New】</font></a><br>
+		Jian Wang, Liang Qiao, Shichong Zhou, Jin Zhou, Jun Wang, <b>Juncheng Li</b>, Shihui Ying, Cai Chang, Jun Shi*
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
+        <a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -314,7 +327,7 @@
 		<td width="206">
 		<img src="./indexpics/TMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/TMI_2023.pdf" target="_blank">Pseudo-Data based Self-Supervised Federated Learning for Classification of Histopathological Images<font color="red">【New】</font></a><br>
+		<td> <a href="paper/TMI_2023.pdf" target="_blank">Pseudo-Data based Self-Supervised Federated Learning for Classification of Histopathological Images</a><br>
 			Yuanming Zhang, Zheng Li, Xiangmin Han, Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[Paper]</a>
@@ -327,7 +340,7 @@
 		<td width="206">
 		<img src="./indexpics/JBHI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/JBHI_2023.pdf" target="_blank">Multi-scale Efficient Graph-Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
+		<td> <a href="paper/JBHI_2023.pdf" target="_blank">Multi-scale Efficient Graph-Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, Jun Shi*
 		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2023. <br>
         <a href="https://arxiv.org/pdf/2305.15773.pdf", target="_blank">[Paper]</a>
@@ -354,7 +367,7 @@
 		<td width="206">
 		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification<font color="red">【New】</font></a><br>
+		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
         <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[Paper]</a>
