--- a/index_zw.html
+++ b/index_zw.html
@@ -304,6 +304,19 @@
 	<tbody>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/TSDDNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【New】</font></a><br>
+		Jian Wang, Liang Qiao, Shichong Zhou, Jin Zhou, Jun Wang, <b>Juncheng Li</b>, Shihui Ying, Cai Chang, Jun Shi*
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
+        <a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【New】</font></a><br>
