--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by CVPR, 2024.</td></tr>
 		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
@@ -185,7 +186,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2381] [Highest Citation: 770] </h2>
+<h2>Selected Publications [Total Citations: 2388] [Highest Citation: 772] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -538,6 +539,28 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+			<td width="206">
+			<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
+			Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo.
+			<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
+			<font color="red">Top computer vision conference.</font><br>
+			<a href="", target="_blank">[Paper]</a>
+			<a href="", target="_blank">[Poster]</a>
+			<a href="", target="_blank">[Code]</a>
+			</td>
+		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+
+
+
+
+
 
 	<tr>	
 		<td width="206">
