--- a/index_zw.html
+++ b/index_zw.html
@@ -120,6 +120,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 CVPR, 2024.</td></tr> 
 		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 CIBM, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMI, 2023.</td></tr> 
@@ -217,7 +218,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2381] [最高引用: 770] </h2>
+<h2>精选出版物 [总引用: 2388] [最高引用: 772] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <!-- <h4>精选预印本</h4>
@@ -565,6 +566,23 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
+		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo.
+		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
+		<font color="red">计算机顶级会议。</font><br>
+		<a href="", target="_blank">[论文]</a>
+		<a href="", target="_blank">[海报]</a>
+		<a href="", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
 	<tr></tr>
 
 	<tr>	
